--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .main{
     width: 100%;
     height: 100vh;
-    background-color: rgb(11, 185, 185);
+    background-color:rgb(11, 185, 185);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,6 +25,7 @@
     border-radius: 5px;
     background-color: white;
     margin-bottom: 100px;
+
  
  
 }
@@ -115,6 +116,7 @@ ul{
     height: 70%;
     display: none;
     margin-left: 2px;
+
     }
 h1{
     color: green;
@@ -122,3 +124,13 @@ h1{
 ul p{
     font-weight: 600;
 }
+/* #correctAns{
+    background-color: white;
+    width: fit-content;
+    border-radius: 5px;
+    font-size: 25px;
+    overflow: scroll;
+    height: 70%;
+    margin-left: 2px;
+    display: none;
+} */
